--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,8 +7,11 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=c++20",
                 "${workspaceFolder}/src//**.cpp",
                 "${workspaceFolder}/src/core//**.cpp",
+                "${workspaceFolder}/src/sim//**.cpp",
+                "${workspaceFolder}/src/vehicle//**.cpp",
                 //"${workspaceFolder}/src/tests//**.cpp",
                 //"${fileDirname}\\**.h",
                 "-o",
